# mmWaveTracker

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/mmwavetracker/: IMonitoringServiceInterface.aidl  IPingServiceInterface.aidl
app/src/main/java/com/example/mmwavetracker/Service/: DetectedActivitiesIntentService.java  (+4 more)
app/src/main/res/drawable/: button_color_change.xml  cell_shape.xml  ic_my_location_black_24dp.xml  ic_sync_black_24dp.xml
app/src/main/res/drawable-ldpi/: expand_hid.xml  ic_expand_less_marron_40dp.xml  ic_expand_more_maroon_40dp.xml  ic_toggle_bg_expand_hid.xml
app/src/main/res/drawable-v24/: bg_light_gold_cell_shape.xml  dash_line.xml  dash_line_bottom.xml  dash_line_right.xml  ic_edit_maroon_24dp.xml  ic_toggle.xml  light_gold_dash_line.xml  tab_background.xml
app/src/main/res/drawable-xhdpi/: bottom_sheet_bg_maroon.xml
app/src/main/res/layout/: activity_device.xml  activity_iperf_confirm_dialog.xml  activity_maps.xml  activity_permissions.xml  fragment_app_iperf.xml  fragment_main_1.xml  fragment_main_2.xml  fragment_main_3.xml  fragment_parent.xml  iperf_dialog.xml  signalstrength.xml  tracer_dialog.xml
app/src/main/res/menu/: legends.xml
app/src/main/res/raw/: hostnames.txt  sharedautocompletes.txt
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rrclibcpp/: client_udp_down.cpp
app/src/main/udprecvlib/: CMakeLists.txt  client.cpp  utils.h
(+56 files in other folders)
